<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plan_bookstore</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a.valencia.2022@alumnos.urjc.es">avalen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <!-- easynav_interfaces is optional at compile time (fake_navigation mode falls
       back without it), but listed here so colcon orders the build correctly. -->
  <depend>easynav_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>ament_index_cpp</depend>
  <depend>plansys2_bt_actions</depend>

  <depend>plansys2_solver</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <depend>sensor_msgs</depend>
  <depend>yolo_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>plansys2_terminal</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
